--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "dependencies": {
     "express": "^4.12.3",
-    "ffi": "^1.3.0",
+    "redis": "^0.12.1",
     "socket.io": "^1.3.5",
-    "socket.io-client": "^1.3.5",
-    "x11": "^1.0.3"
+    "socket.io-client": "^1.3.5"
   }
 }
