--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git"
   },
   "dependencies": {
+    "bcrypt": "^0.8.2",
     "express": "^4.12.3",
     "redis": "^0.12.1",
     "socket.io": "^1.3.5",
