cleaned up some stuff

--- a/server/windows/windows/windows.vcxproj
+++ b/server/windows/windows/windows.vcxproj
@@ -64,10 +64,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HHKCallbacks.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="stdinflush.txt" />
+    <ClInclude Include="HHKCallbacks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
