--- a/server/windows/windows/windows.vcxproj.filters
+++ b/server/windows/windows/windows.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HHKCallbacks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="stdinflush.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
+    <ClInclude Include="HHKCallbacks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
