--- a/server/windows/eventlisteners/windows/windows.vcxproj
+++ b/server/windows/eventlisteners/windows/windows.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C17CB85C-24D1-4C0B-A203-FC99CCC79EEA}</ProjectGuid>
     <RootNamespace>windows</RootNamespace>
-    <ProjectName>MoveMouse</ProjectName>
+    <ProjectName>EventListener</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
