fixed cmake and button click fail

--- a/client/linux/CMakeLists.txt
+++ b/client/linux/CMakeLists.txt
@@ -4,5 +4,5 @@ project(csrc)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
-add_executable(csrc ${SOURCE_FILES} InputSimulator.cpp InputSimulator.h)
+add_executable(csrc ${SOURCE_FILES} InputSimulator.cpp)
 target_link_libraries(csrc X11 Xtst)
